testsuite/tests/rename/should_fail/T2993.stderr

T2993.hs:7:13: error:
    Variable not in scope: (<**>) :: t1 -> (a0 -> a0) -> t0
    Perhaps you meant ‘<*>’ (imported from Prelude)
